cmake_minimum_required(VERSION 3.28)
project(learning_cpp)

set(CMAKE_CXX_STANDARD 17)


add_executable(
        learning_cpp
#        main.cpp
#        how-to-think-like-a-computer-scientist-cpp/variables-and-types/outputting-variables.cpp
#        how-to-think-like-a-computer-scientist-cpp/function/math-function.cpp
#        how-to-think-like-a-computer-scientist-cpp/function/adding-new-function.cpp
#        how-to-think-like-a-computer-scientist-cpp/function/functions-with-result.cpp
#        how-to-think-like-a-computer-scientist-cpp/recursion/infinite-recursion.cpp
#        how-to-think-like-a-computer-scientist-cpp/fruitful-functions/incremental-development.cpp
#        how-to-think-like-a-computer-scientist-cpp/fruitful-functions/overloading.cpp
        how-to-think-like-a-computer-scientist-cpp/fruitful-functions/bool.cpp
        how-to-think-like-a-computer-scientist-cpp/fruitful-functions/leap-of-faith.cpp
)
