cmake_minimum_required(VERSION 3.28)
project(learning_cpp)

set(CMAKE_CXX_STANDARD 17)


add_executable(
        learning_cpp
#        main.cpp
#        how-to-think-like-a-computer-scientist-cpp/variables-and-types/outputting-variables.cpp
#        how-to-think-like-a-computer-scientist-cpp/function/math-function.cpp
#        how-to-think-like-a-computer-scientist-cpp/function/adding-new-function.cpp
#        how-to-think-like-a-computer-scientist-cpp/function/functions-with-result.cpp
#        how-to-think-like-a-computer-scientist-cpp/recursion/infinite-recursion.cpp
#        how-to-think-like-a-computer-scientist-cpp/fruitful-functions/incremental-development.cpp
#        how-to-think-like-a-computer-scientist-cpp/fruitful-functions/overloading.cpp
#        how-to-think-like-a-computer-scientist-cpp/fruitful-functions/bool.cpp
#        how-to-think-like-a-computer-scientist-cpp/fruitful-functions/leap-of-faith.cpp
#        how-to-think-like-a-computer-scientist-cpp/iteration/multiple-assignment.cpp
#        how-to-think-like-a-computer-scientist-cpp/iteration/iteration.cpp
#        how-to-think-like-a-computer-scientist-cpp/iteration/encapsulation-and-generalization.cpp
#        how-to-think-like-a-computer-scientist-cpp/iteration/functions.cpp
#        how-to-think-like-a-computer-scientist-cpp/iteration/development-plan.cpp
#        how-to-think-like-a-computer-scientist-cpp/strings/apstring.cpp
#        how-to-think-like-a-computer-scientist-cpp/structures/point.cpp
#        how-to-think-like-a-computer-scientist-cpp/structures/rectangle.cpp
        how-to-think-like-a-computer-scientist-cpp/structures/function.cpp
#        how-to-think-like-a-computer-scientist-cpp/structures/algorithms.cpp
#        how-to-think-like-a-computer-scientist-cpp/vectors/vector.cpp
        how-to-think-like-a-computer-scientist-cpp/vectors/random-numbers.cpp
        how-to-think-like-a-computer-scientist-cpp/member-function/member-function.cpp
        how-to-think-like-a-computer-scientist-cpp/member-function/constructors.cpp
        how-to-think-like-a-computer-scientist-cpp/member-function/header-files.h
        how-to-think-like-a-computer-scientist-cpp/vectors-of-objects/Card.cpp
)
